# pyGRSUtimetableBot

./: README.md  pyproject.toml
app/: alembic.ini  bot.py  celerybeat-schedule  control.py  data.db  data.db-journal  main.py  models.py  scraper.py  settings.py  validationBodys.py
app/alembic/: env.py
app/alembic/versions/: 02aab967671c_.py  032e69b07a02_.py  05138034f3ec_.py  09ea5a2207f6_add_a_user.py  13015023f15e_.py  345744862c52_.py  3c6776bfee65_.py  43449ecb4fcd_.py  4ce5606250cc_new_version.py  4da57a664a06_add_a_user.py  5556f9de5839_.py  68a0b1f6f928_.py  7c4bf46f8dcc_.py  98c46e3d6f80_.py  a14d5b1f00c6_add_a_user.py  adbe26ecfa6e_.py  bf78c7c10750_one_to_many.py  fd424adb8649_add_table_users.py
app/api/: control.py  schemas.py
app/control/: control.py
app/models/: __init__.py  course.py  faculty.py  form.py  static_info.py  student_group.py  user.py
app/servise/: auth.py  course_servises.py  faculty_servises.py  form_servises.py  group_servises.py  page_servises.py  static_servises.py  user_servises.py
app/templates/: index.html  login.html
