[tool.poetry]
name = "pygrsutimetablebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.6.5"
fastapi = "^0.67.0"
gino = "^1.0.1"
pydantic = "^1.8.2"
uvicorn = "^0.14.0"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
pyTelegramBotAPI = "^3.8.2"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
