[tool.poetry]
name = "grsunic"
version = "0.1.0"
description = ""
authors = ["Alexey Rekets <alexey.rekets@intexsoft.by>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.23"
fastapi = "^0.68.1"
alembic = "^1.6.5"
pyTelegramBotAPI = "^3.8.3"
beautifulsoup4 = "^4.9.3"
psycopg2 = "^2.9.1"
lxml = "^4.6.3"
selenium = "^3.141.0"
webdriver-manager = "^3.4.2"
celery = {extras = ["redis"], version = "^5.1.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
